modified:   composer.json

--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,12 @@
             "email": "info@osama.app"
         }
     ],
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "extra": {
+        "laravel": {
+          "providers": [
+            "Hawkiq\\LaravelZaincash"
+          ]
+        }
+      }
 }
